--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "run-sequence": "^1.1.5",
     "spritesmith": "^3.1.0",
     "through2": "^2.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Moonshell/front-custos"
   }
 }
