--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.2",
     "gulp-imagemin": "^2.4.0",
+    "gulp-plumber": "^1.1.0",
     "imagemin-pngquant": "^4.2.2",
     "postcss": "^5.0.16",
     "request": "^2.69.0",
