Remove gulp dependency

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "author": "",
   "license": "MIT",
+  "devDependencies": {
+    "gulp": "^3.9.1"
+  },
   "dependencies": {
     "autoprefixer": "^6.3.3",
     "cheerio": "^0.20.0",
     "del": "^2.2.0",
     "glob": "^7.0.0",
-    "gulp": "^3.9.1",
     "gulp-cache": "^0.4.2",
     "gulp-imagemin": "^2.4.0",
     "gulp-plumber": "^1.1.0",
