修复字符串 replace 函数可能导致的问题

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "0.2.16",
+  "version": "0.2.18",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "del": "^2.2.0",
     "glob": "^7.0.0",
     "gulp-cache": "^0.4.2",
+    "gulp-csso": "^1.1.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-plumber": "^1.1.0",
     "imagemin-pngquant": "^4.2.2",
