GUI版以来的累积更新

--- a/example/package.json
+++ b/example/package.json
@@ -15,12 +15,13 @@
       "staticUrlHead": "http://example.com/{PROJECT_NAME}",
       "flatten": true,
       "hashLink": true,
-      "useStaticUrlHead": true
+      "useStaticUrlHead": false
     },
     "upOpt": {
       "delta": true,
       "page": "",
-      "form": "function uploadForm(fileStream, relativeName, projectName) {\r\n    var suffix = (relativeName.substr(relativeName.lastIndexOf('.'))),\r\n        prefix = (relativeName.split('/').slice(0, -1));\r\n    (['.html', '.shtml', '.php'].indexOf(suffix) < 0) && prefix.pop();\r\n    prefix.splice(0, 0, projectName);\r\n    return {\r\n        'fileName': relativeName,\r\n        'prefix': prefix.join('/'),\r\n        'myfile': fileStream\r\n    };\r\n}"
+      "form": "function uploadForm(fileStream, filePath) {\r\n    var fileDir = filePath.split('/'),\r\n        fileName = fileDir.pop().split('.'),\r\n        fileType = fileName.length > 1 ? fileName.pop() : '';\r\n    // console.log('其它可用参数：', this.queryAvailableArguments().join(', '));\r\n    return {\r\n        'fileDir': fileDir.join('/'),\r\n        'fileName': fileName.join('.'),\r\n        'fileType': fileType,\r\n        'fileContents': fileStream\r\n    };\r\n}",
+      "judge": "function uploadJudge(response) {\n    return /^上传成功/.test(response);\n}"
     },
     "tasks": [
       "prepare_build",
@@ -33,9 +34,13 @@
       "run_browserify",
       "allot_link",
       "optimize_image",
-      "do_dist",
-      "do_upload"
-    ]
+      "do_dist"
+    ],
+    "innerSrcDir": "./src",
+    "innerDistDir": "./dist",
+    "preprocessing": "function preprocessing(console, srcDir) {\n    console.log('项目源目录：', srcDir);\n    // console.log('其它可用参数：', this.queryAvailableArguments().join(', '));\n    // Todo: do something before build.\n}",
+    "postprocessing": "function postprocessing(console, distDir) {\n    console.log('项目输出目录：', distDir);\n    // console.log('其它可用参数：', this.queryAvailableArguments().join(', '));\n    // Todo: do something after build.\n}",
+    "keepOldCopy": false
   },
   "watchToRebuilding": false
 }
