同步GUI版更新

--- a/example/package.json
+++ b/example/package.json
@@ -24,9 +24,9 @@
       "judge": "function uploadJudge(response) {\n    return /^上传成功/.test(response);\n}"
     },
     "tasks": [
+      "compile_sass",
       "prepare_build",
       "replace_const",
-      "compile_sass",
       "prefix_crafter",
       "sprite_crafter",
       "run_csso",
@@ -38,8 +38,8 @@
     ],
     "innerSrcDir": "./src",
     "innerDistDir": "./dist",
-    "preprocessing": "function preprocessing(console, buildDir) {\n    console.log('项目构建目录：', buildDir);\n    // console.log('其它可用参数：', this.queryAvailableArguments().join(', '));\n    // Todo: do something before build.\n}",
-    "postprocessing": "function postprocessing(console, distDir) {\n    console.log('项目输出目录：', distDir);\n    // console.log('其它可用参数：', this.queryAvailableArguments().join(', '));\n    // Todo: do something after build.\n}",
+    "preprocessing": "function preprocessing(console, workDir) {\n    console.log('当前工作目录：', workDir);\n    // console.log('其它可用参数：', this.queryAvailableArguments().join(', '));\n    // Todo: do something before build.\n}",
+    "postprocessing": "function postprocessing(console, workDir) {\n    console.log('当前工作目录：', workDir);\n    // console.log('其它可用参数：', this.queryAvailableArguments().join(', '));\n    // Todo: do something after build.\n}",
     "keepOldCopy": false
   },
   "watchToRebuilding": false
