--- a/example/package.json
+++ b/example/package.json
@@ -1,9 +1,9 @@
 {
-  "version": "0.1.0",
+  "version": "1.0.2",
   "fcOpt": {
     "scOpt": {
-      "useRatio": 2,
-      "useRem": 10
+      "useRatio": "2",
+      "useRem": "1"
     },
     "pcOpt": {
       "browsers": "Android > 2.3, iOS > 6.0"
@@ -25,15 +25,14 @@
     },
     "tasks": [
       "compile_sass",
+      "run_babel",
       "prepare_build",
       "replace_const",
       "prefix_crafter",
       "sprite_crafter",
-      "run_csso",
       "join_include",
       "run_browserify",
       "allot_link",
-      "optimize_image",
       "do_dist"
     ],
     "innerSrcDir": "./src",
