--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "1.0.5",
+  "version": "1.1.4",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -8,20 +8,20 @@
   },
   "author": "krimeshu",
   "license": "MIT",
-  "devDependencies": {
-    "gulp": "^3.9.1"
-  },
   "dependencies": {
     "autoprefixer": "^6.3.3",
     "browserify": "^13.0.0",
     "cheerio": "^0.20.0",
     "del": "^2.2.0",
     "glob": "^7.0.0",
+    "gulp": "^3.9.1",
     "gulp-cache": "^0.4.2",
     "gulp-csso": "^1.1.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.2.0",
+    "gulp-babel": "^6.1.2",
+    "babel-preset-es2015": "^6.9.0",
     "imagemin-pngquant": "^4.2.2",
     "node-sass": "^3.4.2",
     "postcss": "^5.0.16",
