--- a/example/package.json
+++ b/example/package.json
@@ -28,11 +28,14 @@
       "run_babel",
       "prepare_build",
       "replace_const",
+      "vue_php_ssr_template",
       "prefix_crafter",
       "sprite_crafter",
+      "run_csso",
       "join_include",
       "run_browserify",
       "allot_link",
+      "optimize_image",
       "do_dist"
     ],
     "innerSrcDir": "./src",
