--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "gulp-csso": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-plumber": "^1.1.0",
+    "gulp-rollup": "^2.11.0",
     "gulp-sass": "^2.3.1",
     "imagemin-pngquant": "^5.0.0",
     "node-sass": "^3.7.0",
