--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "1.3.3",
+  "version": "1.4.1",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^6.3.6",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
     "browserify": "^13.0.1",
     "cheerio": "^0.22.0",
     "del": "^2.2.0",
@@ -27,6 +28,9 @@
     "node-sass": "^3.7.0",
     "postcss": "^5.0.21",
     "request": "^2.72.0",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
     "run-sequence": "^1.2.1",
     "spritesmith": "^3.1.0",
     "through2": "^2.0.1"
