使用 gulp-better-rollup; 增加 format 可配参数

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "1.7.2",
+  "version": "1.8.1",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -19,11 +19,11 @@
     "glob": "^7.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-better-rollup": "^1.1.1",
     "gulp-cache": "^0.4.5",
     "gulp-csso": "^2.0.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-plumber": "^1.1.0",
-    "gulp-rollup": "^2.11.0",
     "gulp-sass": "^2.3.1",
     "imagemin-pngquant": "^5.0.0",
     "node-sass": "^3.7.0",
