--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "1.9.4",
+  "version": "1.10.1",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "autoprefixer": "^6.3.6",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.24.1",
     "browserify": "^13.0.1",
     "cheerio": "^0.22.0",
     "del": "^2.2.0",
