--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "1.10.1",
+  "version": "1.10.2",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "gulp-imagemin": "^3.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.1",
+    "gulp-sourcemaps": "^2.6.0",
     "imagemin-pngquant": "^5.0.1",
     "node-sass": "^3.7.0",
     "postcss": "^5.0.21",
