rollup 任务增加可选 postcss 插件，便于 react 使用样式

--- a/example/package.json
+++ b/example/package.json
@@ -15,7 +15,8 @@
         "nodeResolve": true,
         "commonJS": true,
         "babel": true,
-        "vue": true
+        "vue": true,
+        "postcssModules": true
       },
       "format": "es6"
     },
