--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "1.12.2",
+  "version": "1.13.1",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -31,10 +31,12 @@
     "imagemin-pngquant": "^5.0.1",
     "node-sass": "^3.7.0",
     "postcss": "^5.0.21",
+    "postcss-modules": "^0.8.0",
     "request": "^2.72.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^7.0.0",
     "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-postcss": "^0.5.3",
     "rollup-plugin-vue": "^2.4.0",
     "run-sequence": "^1.2.1",
     "spritesmith": "^3.1.0",
