--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,8 @@
       "useRem": "1"
     },
     "pcOpt": {
-      "browsers": "Android > 2.3, iOS > 6.0"
+      "browsers": "Android > 2.3, iOS > 6.0",
+      "cssnano": true
     },
     "ruOpt": {
       "entry": "js/use-es6-module.js",
@@ -16,9 +17,10 @@
         "commonJS": true,
         "babel": true,
         "vue": true,
-        "postcssModules": true
+        "postcssModules": true,
+        "uglify": true
       },
-      "format": "es6"
+      "format": "es"
     },
     "alOpt": {
       "allot": true,
@@ -43,12 +45,13 @@
       "vue_php_ssr_template",
       "prefix_crafter",
       "sprite_crafter",
+      "optimize_image",
       "run_csso",
       "join_include",
       "rollup_bundle",
       "run_browserify",
+      "run_uglify",
       "allot_link",
-      "optimize_image",
       "do_dist"
     ],
     "innerSrcDir": "./src",
