--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "1.14.5",
+  "version": "1.14.6",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "gulp-better-rollup": "^1.1.1",
     "gulp-cache": "^0.4.5",
     "gulp-csso": "^2.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
