--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "example",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "fcOpt": {
     "scOpt": {
       "useRatio": "2",
@@ -34,8 +34,9 @@
     "upOpt": {
       "delta": true,
       "page": "",
-      "form": "function uploadForm(fileStream, filePath) {\r\n    var fileDir = filePath.split('/'),\r\n        fileName = fileDir.pop().split('.'),\r\n        fileType = fileName.length > 1 ? fileName.pop() : '';\r\n    // console.log('其它可用参数：', this.queryAvailableArguments().join(', '));\r\n    return {\r\n        'fileDir': fileDir.join('/'),\r\n        'fileName': fileName.join('.'),\r\n        'fileType': fileType,\r\n        'fileContents': fileStream\r\n    };\r\n}",
-      "judge": "function uploadJudge(response) {\n    return /^上传成功/.test(response);\n}"
+      "filter": "/* \n    决定某文件是否需要上传\n      可用的注入参数:\n        - console, params, config, projName, projDir, srcDir, distDir, workDir...\n        - filePath: Path of the uploading file\n        - fileStreem: Stream of the uploading file\n      查看所有可用参数:\n        - console.log(this.queryAvailableArguments();\n */\nfunction uploadFilter(filePath, projName) {     \n    // 例子: \n    //   不上传 *.map 类的文件\n    return !/\\.map$/.test(filePath); \n}",
+      "form": "/* \r\n    生成文件上传的表单.\r\n      可用的注入参数:\r\n        - console, params, config, projName, projDir, srcDir, distDir, workDir...\r\n        - filePath: Path of the uploading file\r\n        - fileStreem: Stream of the uploading file\r\n      查看所有可用参数:\r\n        - console.log(this.queryAvailableArguments();\r\n */\r\n function uploadForm(fileStream, filePath) {\r\n    // 例子:\r\n    //   生成带有 fileDir, fileName, fileType, fileContents 四个字段的表单，其中 fileContents 为上传的文件内容\r\n    var fileDir = filePath.split('/'),\r\n        fileName = fileDir.pop().split('.'),\r\n        fileType = fileName.length > 1 ? fileName.pop() : '';\r\n    return {\r\n        'fileDir': fileDir.join('/'),\r\n        'fileName': fileName.join('.'),\r\n        'fileType': fileType,\r\n        'fileContents': fileStream\r\n    };\r\n}",
+      "judge": "/*\n    判断文件上传是否成功.\n      可用的注入参数:\n        - console, params, config, projName, projDir, srcDir, distDir, workDir...\n        - filePath: Path of the uploading file\n        - fileStreem: Stream of the uploading file\n        - reponse: Reponse from the uploading server\n      查看所有可用参数:\n        - console.log(this.queryAvailableArguments();\n */\nfunction uploadJudge(response) {\n    // 例子: \n    //   根据是否返回 { status: 2 } 判断上传结果.\n    try {\n        var res = JSON.parse(response);\n        return res.status == 2;\n    } catch (e) {\n        return false;\n    }\n}"
     },
     "tasks": [
       "compile_sass",
@@ -54,8 +55,8 @@
     ],
     "innerSrcDir": "./src",
     "innerDistDir": "./dist",
-    "preprocessing": "function preprocessing(console, workDir) {\n    console.log('当前工作目录：', workDir);\n    // console.log('其它可用参数：', this.queryAvailableArguments().join(', '));\n    // Todo: do something before build.\n}",
-    "postprocessing": "function postprocessing(console, workDir) {\n    console.log('当前工作目录：', workDir);\n    // console.log('其它可用参数：', this.queryAvailableArguments().join(', '));\n    // Todo: do something after build.\n}",
+    "preprocessing": "/* \n    任务开始前的预处理逻辑\n      可用的注入参数:\n        - console, params, config, projName, projDir, srcDir, distDir, workDir...\n        - filePath: Path of the uploading file\n        - fileStreem: Stream of the uploading file\n      查看所有可用参数:\n        - console.log(this.queryAvailableArguments();\n */\nfunction preprocessing(console, workDir) {\n    console.log('当前工作目录：', workDir);\n}",
+    "postprocessing": "/* \n    任务结束前的处理逻辑\n      可用的注入参数:\n        - console, params, config, projName, projDir, srcDir, distDir, workDir...\n        - filePath: Path of the uploading file\n        - fileStreem: Stream of the uploading file\n      查看所有可用参数:\n        - console.log(this.queryAvailableArguments();\n */\nfunction postprocessing(console, workDir) {\n    console.log('当前工作目录：', workDir);\n}",
     "keepOldCopy": false,
     "smOpt": {
       "mappingUrl": "// function mappingUrl(file) {\n//     return 'http://asset-host.example.com/' + file.relative + '.map';\n// }",
