--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "1.14.9",
+  "version": "1.14.12",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.24.1",
+    "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "cheerio": "^0.22.0",
     "cssnano": "^3.10.0",
@@ -45,6 +46,7 @@
     "run-sequence": "^1.2.1",
     "spritesmith": "^3.1.0",
     "through2": "^2.0.1",
+    "uglify-es": "^3.0.26",
     "vue": "^2.3.4"
   },
   "repository": {
