--- a/example/package.json
+++ b/example/package.json
@@ -50,8 +50,7 @@
       "optimize_image",
       "run_csso",
       "join_include",
-      "rollup_bundle",
-      "run_uglify",
+      "webpack_bundle",
       "allot_link",
       "do_dist"
     ],
