--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^6.3.6",
+    "babel-loader": "^7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^13.0.1",
     "cheerio": "^0.22.0",
+    "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
     "del": "^2.2.0",
     "glob": "^7.0.0",
@@ -29,12 +31,13 @@
     "gulp-imagemin": "^3.0.1",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
-    "gulp-sass": "^2.3.1",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
     "imagemin-pngquant": "^5.0.1",
-    "node-sass": "^3.7.0",
+    "node-sass": "^4.5.3",
     "postcss": "^5.0.21",
+    "postcss-loader": "^2.0.6",
     "postcss-modules": "^0.8.0",
     "request": "^2.72.0",
     "rollup-plugin-babel": "^2.7.1",
@@ -44,10 +47,15 @@
     "rollup-plugin-uglify": "^2.0.1",
     "rollup-plugin-vue": "^2.4.0",
     "run-sequence": "^1.2.1",
+    "sass-loader": "^6.0.6",
     "spritesmith": "^3.1.0",
+    "style-loader": "^0.18.2",
     "through2": "^2.0.1",
     "uglify-es": "^3.0.26",
-    "vue": "^2.3.4"
+    "vue": "^2.3.4",
+    "vue-style-loader": "^3.0.1",
+    "webpack": "^3.3.0",
+    "webpack-stream": "^3.2.0"
   },
   "repository": {
     "type": "git",
