--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
   "author": "krimeshu",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^6.3.6",
+    "autoprefixer": "^7.1.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
-    "browserify": "^13.0.1",
+    "browserify": "^14.4.0",
     "cheerio": "^0.22.0",
+    "copy-dir": "^0.3.0",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
-    "del": "^2.2.0",
+    "del": "^3.0.0",
     "glob": "^7.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-better-rollup": "^1.1.1",
     "gulp-cache": "^0.4.5",
-    "gulp-csso": "^2.0.0",
+    "gulp-csso": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.0.1",
     "gulp-plumber": "^1.1.0",
@@ -35,25 +36,24 @@
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
     "imagemin-pngquant": "^5.0.1",
-    "node-sass": "^4.5.3",
-    "postcss": "^5.0.21",
+    "postcss": "^6.0.8",
     "postcss-loader": "^2.0.6",
     "postcss-modules": "^0.8.0",
     "request": "^2.72.0",
     "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^7.0.0",
-    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-postcss": "^0.5.3",
     "rollup-plugin-uglify": "^2.0.1",
     "rollup-plugin-vue": "^2.4.0",
-    "run-sequence": "^1.2.1",
+    "run-sequence": "^2.1.0",
     "sass-loader": "^6.0.6",
     "spritesmith": "^3.1.0",
     "style-loader": "^0.18.2",
     "through2": "^2.0.1",
     "uglify-es": "^3.0.26",
     "vue": "^2.3.4",
-    "vue-style-loader": "^3.0.1",
+    "vue-loader": "^13.0.2",
     "webpack": "^3.3.0",
     "webpack-stream": "^3.2.0"
   },
