--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^7.1.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
@@ -20,6 +21,7 @@
     "cheerio": "^0.22.0",
     "copy-dir": "^0.3.0",
     "css-loader": "^0.28.4",
+    "css-modulesify": "^0.28.0",
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
     "glob": "^7.0.0",
@@ -35,6 +37,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
+    "i": "^0.3.5",
     "imagemin-pngquant": "^5.0.1",
     "postcss": "^6.0.8",
     "postcss-loader": "^2.0.6",
@@ -54,6 +57,7 @@
     "uglify-es": "^3.0.26",
     "vue": "^2.4.2",
     "vue-loader": "^13.0.2",
+    "vueify": "^9.4.1",
     "webpack": "^3.3.0",
     "webpack-stream": "^3.2.0"
   },
