--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-uglify": "^3.0.0",
     "i": "^0.3.5",
     "imagemin-pngquant": "^5.0.1",
+    "less-modulesify": "^1.1.3",
     "postcss": "^6.0.8",
     "postcss-loader": "^2.0.6",
     "postcss-modules": "^0.8.0",
