打包相关更新：实现 browserify 打包 react/vue/css modules；修复 webpack 的 sourcemap 路径问题；

--- a/example/package.json
+++ b/example/package.json
@@ -66,8 +66,7 @@
     "brOpt": {
       "babelify": true,
       "vueify": true,
-      "cssModulesify": true,
-      "cssModules": true
+      "lessModulesify": true
     }
   },
   "watchToRebuilding": false
