--- a/example/package.json
+++ b/example/package.json
@@ -50,7 +50,7 @@
       "optimize_image",
       "run_csso",
       "join_include",
-      "webpack_bundle",
+      "rollup_bundle",
       "allot_link",
       "do_dist"
     ],
