--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -32,6 +32,7 @@
     "css-modulesify": "^0.28.0",
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
+    "graceful-fs": "^4.2.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-better-rollup": "^1.1.1",
@@ -48,6 +49,7 @@
     "imagemin-pngquant": "^5.0.1",
     "json-colorizer": "^2.2.2",
     "less-modulesify": "^1.1.3",
+    "node-sass": "^4.13.1",
     "postcss": "^6.0.8",
     "postcss-loader": "^2.0.6",
     "postcss-modules": "^0.8.0",
