--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "front-custos",
-  "version": "3.0.3",
+  "version": "3.0.5",
   "description": "Common front end gulp task collections.",
   "main": "index.js",
   "scripts": {
@@ -32,8 +32,7 @@
     "css-modulesify": "^0.28.0",
     "cssnano": "^3.10.0",
     "del": "^3.0.0",
-    "graceful-fs": "^4.2.3",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-babel": "^6.1.2",
     "gulp-better-rollup": "^1.1.1",
     "gulp-cache": "^0.4.5",
@@ -43,13 +42,13 @@
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^7.0.0",
     "gulp-rollup": "^2.14.0",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
+    "gulp4-run-sequence": "^1.0.1",
     "imagemin-pngquant": "^5.0.1",
     "json-colorizer": "^2.2.2",
     "less-modulesify": "^1.1.3",
-    "node-sass": "^4.13.1",
     "postcss": "^6.0.8",
     "postcss-loader": "^2.0.6",
     "postcss-modules": "^0.8.0",
@@ -60,7 +59,6 @@
     "rollup-plugin-postcss": "^0.5.4",
     "rollup-plugin-uglify": "^2.0.1",
     "rollup-plugin-vue": "^2.4.1",
-    "run-sequence": "^2.1.0",
     "sass-loader": "^6.0.6",
     "spritesmith": "^3.1.0",
     "style-loader": "^0.18.2",
